<resources>
    <string name="app_name">EquiClubApp</string>
    <string name="la_liste_des_clients">La liste des Clients</string>
    <string name="nom_du_client">Nom du client</string>
    <string name="ajouter_un_client">Ajouter un client</string>
    <string name="nom">Nom  </string>
    <string name="pr_nom">Prénom  </string>
    <string name="doc_d_identit">Doc d\'identité</string>
    <string name="num_d_identit">Num </string>
    <string name="l_email">L email  </string>
    <string name="num_t_l">Num télé  </string>
    <string name="enregistrer">Enregistrer</string>
    <string name="xx000000">XX000000</string>
    <string name="photo_du_client">Photo du client</string>
    <string name="pr_nom_nom">Prénom Nom</string>
    <string name="tele_icon">tele icon</string>
    <string name="_212666666666">+212666666666</string>
    <string name="telephone">Telephone</string>
    <string name="email_icon">email icon</string>
    <string name="email_email_ma">email@email.ma</string>
    <string name="email">Email</string>
    <string name="identity_icon">identity icon</string>
    <string name="cnie">CNIE</string>
    <string name="birth_icon">birth icon</string>
    <string name="_00_00_0000">00/00/0000</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="register_icon">Register icon</string>
    <string name="date_d_inscription">Date d\'inscription</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="validit_d_assurance">Validité d\'assurance</string>
    <string name="validit_de_licence">Validité de licence</string>
    <string name="ensurence_icon">Ensurence icon</string>
    <string name="camera">camera</string>
    <string name="ajouter_seance">Ajouter seance</string>
    <string name="groupe">Groupe</string>
    <string name="moniteur_du_seance">Moniteur de la seance</string>
    <string name="date_du_seance">Date du seance</string>
    <string name="select">Select</string>
    <string name="l_heur_de_la_seance">L\'heur de la seance</string>
    <string name="nouveau_goupe">Nouveau goupe</string>
    <string name="dur_e_de_la_s_ance">Durée de la séance</string>
    <string name="ajouter">Ajouter</string>
    <string name="chercher_un_client">Chercher un client</string>
    <string name="desactiv">desactivé</string>
    <string name="calendrier">Calendrier</string>
    <string name="ajouter_une_tache">Ajouter une tache</string>
    <string name="nom_de_l_utilisateur">Nom de l\'utilisateur</string>
    <string name="titre_de_la_tache">Titre de la tache</string>
    <string name="d_tail_de_la_tache">Détail de la tache</string>
    <string name="date_de_la_tache">date de la tache</string>
    <string name="l_heur_de_la_tache">L\'heur de la tache</string>
    <string name="la_liste_des_utilisateurs">La liste des utilisateurs</string>
    <string name="chercher_un_utilisateur">Chercher un utilisateur</string>
    <string name="ajouter_un_utilisateur">Ajouter un utilisateur</string>
    <string name="type_d_utilisateur">Type d\'utilisateur</string>
    <string name="role_de_l_utilisateur">Role de l\'utilisateur</string>
    <string name="date_du_contrat">Date du contrat</string>
    <string name="date_de_d_rnier_acc_s">Date de dérnier accès</string>
    <string name="rester_connecte">Rester connecté</string>
    <string name="l_evaluation_du_client">L\'evaluation du client</string>
</resources>