<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientDetailActivity">
    <ImageView
        android:id="@id/clientDetailImg"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:contentDescription="@string/photo_du_client"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:id="@id/clientName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/clientDetailImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/pr_nom_nom"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/layoutTele"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/clientName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="6dp"
        android:background="@drawable/border_bottom">
        <ImageView
            android:id="@id/teleIcon"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/tele_icon"
            android:src="@drawable/ic_action_tele"/>
        <TextView
            android:id="@id/clientTele"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_212666666666"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/teleIcon"
            app:layout_constraintEnd_toStartOf="@id/btnCallClient" />
        <ImageButton
            android:id="@id/btnCallClient"
            android:layout_width="60dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_action_call_tele"
            android:background="@android:color/transparent"
            android:contentDescription="@string/tele_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/clientTele"
            app:layout_constraintStart_toEndOf="@id/teleIcon"
            android:text="@string/telephone"
            android:textSize="14sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/layoutEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutTele"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="6dp"
        android:background="@drawable/border_bottom">
        <ImageView
            android:id="@id/emailIcon"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/email_icon"
            android:src="@drawable/ic_action_email"/>
        <TextView
            android:id="@id/clientEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email_email_ma"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/emailIcon"
            app:layout_constraintEnd_toStartOf="@id/btnEmailClient" />
        <ImageButton
            android:id="@id/btnEmailClient"
            android:layout_width="60dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_action_send_email"
            android:background="@android:color/transparent"
            android:contentDescription="@string/email_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/clientEmail"
            app:layout_constraintStart_toEndOf="@id/emailIcon"
            android:text="@string/email"
            android:textSize="14sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/layoutIdentity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="6dp"
        android:background="@drawable/border_bottom">
        <ImageView
            android:id="@id/idIcon"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/identity_icon"
            android:src="@drawable/ic_action_identity"/>
        <TextView
            android:id="@id/clientIdentity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/xx000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/idIcon"
            app:layout_constraintEnd_toEndOf="parent" />
        <TextView
            android:id="@id/idDoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/clientIdentity"
            app:layout_constraintStart_toEndOf="@id/idIcon"
            android:text="@string/cnie"
            android:textSize="14sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/layoutDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutIdentity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="6dp"
        android:background="@drawable/border_bottom">
        <ImageView
            android:id="@id/idBirthIcon"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/birth_icon"
            android:src="@drawable/ic_action_birth"/>
        <TextView
            android:id="@id/birthClient"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/_00_00_0000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/idBirthIcon" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/birthClient"
            app:layout_constraintStart_toEndOf="@id/idBirthIcon"
            android:text="@string/date_de_naissance"
            android:textSize="14sp"/>
        <ImageView
            android:id="@id/idRegisterIcon"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/birthClient"
            android:contentDescription="@string/register_icon"
            android:src="@drawable/ic_action_register"/>
        <TextView
            android:id="@id/registerClient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_00_00_0000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/idRegisterIcon" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/registerClient"
            app:layout_constraintStart_toEndOf="@id/idRegisterIcon"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/date_d_inscription"
            android:textSize="14sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:background="#EAEAEA">
        <Button
            android:id="@id/btnEditClient"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/modifier"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:textSize="9sp"
            android:drawableTop="@drawable/ic_action_edit" />
        <Button
            android:id="@id/btnDeleteClient"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/supprimer"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:textSize="9sp"
            android:drawableTop="@drawable/ic_action_delete" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>