<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddClientActivity"
    android:layout_margin="8dp">
    <TextView
        android:id="@id/addClientTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:text="@string/ajouter_un_client"/>
    <LinearLayout
        android:id="@id/layoutClientLName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addClientTitle"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="2"
            android:layout_marginTop="6dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nom"/>
        <EditText
            android:id="@id/addClientLName"
            android:layout_marginTop="6dp"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@id/layoutClientFName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutClientLName"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="2"
            android:layout_marginTop="6dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pr_nom"/>
        <EditText
            android:id="@id/addClientFName"
            android:layout_marginTop="6dp"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@id/layoutClientDoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutClientFName"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="2"
            android:layout_marginTop="6dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/doc_d_identit"/>
        <EditText
            android:id="@id/addClientDoc"
            android:layout_marginTop="6dp"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@id/layoutClientDocNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutClientDoc"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="2"
            android:layout_marginTop="6dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/num_d_identit"/>
        <EditText
            android:id="@id/addClientDocNum"
            android:layout_marginTop="6dp"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@id/layoutClientEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutClientDocNum"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="2"
            android:layout_marginTop="6dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/l_email"/>
        <EditText
            android:id="@id/addClientEmail"
            android:layout_marginTop="6dp"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@id/layoutClientPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutClientEmail"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="2"
            android:layout_marginTop="6dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/num_t_l"/>
        <EditText
            android:id="@id/addClientPhone"
            android:layout_marginTop="6dp"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/enregistrer"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>