<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".EditUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/layoutNewImgUser"
        android:layout_width="0dp"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@id/userImgEdit"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_action_profil"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@id/btnAddImgUser"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/camera"
            android:src="@drawable/ic_action_cam"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/userImgEdit" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@id/addUserTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/ajouter_un_utilisateur"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutNewImgUser" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/layoutUserLName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/principal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addUserTitle"
        app:startIconContentDescription="@string/nom"
        app:startIconDrawable="@drawable/ic_action_profil">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@id/addUserLName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/nom"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/layoutUserFName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/principal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutUserLName"
        app:startIconContentDescription="@string/pr_nom"
        app:startIconDrawable="@drawable/ic_action_profil">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@id/addUserFName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/pr_nom"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/layoutUserEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/principal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutUserFName"
        app:startIconContentDescription="@string/l_email"
        app:startIconDrawable="@drawable/ic_action_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@id/addUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/l_email"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/layoutUserPhone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/principal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutUserEmail"
        app:startIconContentDescription="@string/num_t_l"
        app:startIconDrawable="@drawable/ic_action_tele">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@id/addUserPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/num_t_l"
            android:inputType="text"
            app:prefixText="+212" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/layoutUserType"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/principal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutUserPhone"
        app:startIconContentDescription="@string/type_d_utilisateur"
        app:startIconDrawable="@drawable/ic_action_identity">

        <AutoCompleteTextView
            android:id="@id/addUserType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_d_utilisateur"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/layoutContractDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/principal"
        app:helperText="jj/mm/aaaa"
        app:helperTextEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutUserType"
        app:startIconContentDescription="@string/date_du_contrat"
        app:startIconDrawable="@drawable/ic_action_register">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@id/addUserContract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/date_du_contrat"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@id/saveUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enregistrer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@id/modifyUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modifier"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
