<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsersActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/headerUsers"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="5dp">
        <TextView
            android:id="@id/usersListTitle"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/la_liste_des_utilisateurs"
            android:textStyle="bold"
            android:gravity="center_vertical"/>
        <com.google.android.material.button.MaterialButton
            android:id="@id/btnAddUser"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/ajouter"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:backgroundTint="#CCCCCC"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/usersListTitle"
            app:rippleColor="#33AAAAAA"
            app:strokeColor="@color/principal"
            app:icon="@android:drawable/ic_input_add" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/searchUser"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/principal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerUsers"
        app:startIconContentDescription="@string/chercher_un_utilisateur"
        app:startIconDrawable="@drawable/ic_action_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@id/editSearchUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/chercher_un_utilisateur"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
    <ListView
        android:id="@id/userList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/searchUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>